Fixed the alignment of page, removed background image & fixed other small bugs

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 
 .heading{
     background-color: #303440;
-    height: 11vh;
+    min-height: 11vh;
     width: 100%;
     position:fixed;
     z-index: 1;
@@ -48,7 +48,7 @@ ul{
 .phones{
     background-color: #EB5054;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     vertical-align:middle;
     padding-top: 20vh;   
 }
@@ -65,7 +65,7 @@ ul{
     
 .services{
     background-color:#F2F2F2;
-    height:90vh;
+    min-height:90vh;
     width:100%;
 }
 
@@ -98,7 +98,7 @@ h2{
 
 .portfolio{
     background-color:#303440;
-    height: 150vh;
+    min-height: 150vh;
     width: 100%;
 }
 .portfolio a{
@@ -116,11 +116,12 @@ h2{
         display: inline-block;
         height: 30vh;
         width: 40vh;
+        padding-top: 25px;
 }
 
 .aboutUs{
     background-color:#F2F2F2;
-    height: 120vh;
+    min-height: 120vh;
     width: 100%;
 }
 
@@ -132,7 +133,7 @@ h2{
     background-color: #EB5054;
     color:white;
     width:100%;
-    height:110vh;
+    min-height:110vh;
 }
 
 .quote{
@@ -163,7 +164,7 @@ border-color: #CA454A;
 
 .footer{
     width:100%;
-    height: 10vh;
+    min-height: 10vh;
     background-color: #303440;
 }
 
@@ -197,3 +198,39 @@ border-color: #CA454A;
 #portfolio_i .singolo-thumbnail {
    transition: all 0.5s ease-in;
 }
+
+.footer>p{
+    padding-top:20px;
+}
+
+.phones .carousel-control{
+    background-image:none;
+}
+
+#contact_i .form-control{
+    color:white;
+}
+
+#main-form  ::-webkit-input-placeholder {
+   color: #FF9699;
+}
+
+#main-form :-moz-placeholder { /* Firefox 18- */
+   color: #FF9699;  
+}
+
+#main-form ::-moz-placeholder {  /* Firefox 19+ */
+   color: #FF9699;  
+}
+
+#main-form :-ms-input-placeholder {  
+   color: #FF9699;  
+}
+
+
+
+
+
+
+
+
